[project]
name = "learnedpatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gym>=0.26.2",
    "matplotlib>=3.10.3",
    "medsegbench>=1.0.0",
    "numpy>=2.2.6",
    "pyqt6>=6.9.1",
    "shimmy>=2.0.0",
    "stable-baselines3[extra]>=2.6.0",
]
